# cairn

./: .gitignore  COMPLETE_ONX_ICON_MAPPING.md  CONFIGURATION.md  Lost_Horse_Canyon_Waypoints.gpx  ONX_ICONS.md  PREVIEW_AND_CONFIG_FEATURES.md  README.md  TECH_DETAIILS.md  TODO.md  cairn_config.json  cairn_config.yaml  coverage.xml  demo.tape  pyproject.toml
cairn/: Instructions for agent.md  __init__.py  __main__.py  cli.py  model.py
demo/: demo_small_caltopo.json  demo_small_storyboard.tape  test_run_storyboard.tape
demo_output/: 1_-_Dark_Divide_100_Miler_Course_Tracks.gpx  2_-_Aid_Stations_Waypoints.gpx  Dark_Divide_100_Miler_Course_Sections_Tracks.gpx  Uncategorized_Tracks.gpx
docs/: color-mapping-reference.md  interactive_smoke_test.md  onx-color-behavior.md  onx-import-export-fidelity-notes.md  onx-sorting-behavior.md  onx-staff-summary-issues.md  onx-waypoint-colors-actual.md  onx-waypoint-colors-definitive.md  onx-waypoint-colors-final.md  tui_regression.md
refactoring-plans/: FINAL_REFACTORING_PLAN.md
sample-maps/: Dark_Divide_100_Miler.json  olympic mountain 100k.json
scripts/: analyze_onx_sorting.py  generate_edge_case_fixtures.py  generate_onx_sort_fixtures.py  run_chaos_demo.sh  run_chaos_demo_slow.sh  test_edge_cases.py  validate_output_integrity.py
tests/: __init__.py  edge_case_test_report.md  test_ab_export.py  test_bulk_rename_prefix_suffix.py  test_bulk_selection.py  test_caltopo_geojson_edge_cases.py  test_caltopo_geojson_style_options.py  test_caltopo_gpx_reader.py  test_caltopo_to_onx_bitterroots_complete.py  test_cli.py  test_mapper.py  (+55 more)
(+176 files in other folders)
